--- a/index.html
+++ b/index.html
@@ -16,3 +16,17 @@ layout: default
     </article>
   {% endfor %}
 </div>
+
+<!-- Pagination links -->
+<nav class="pagination">
+  {% if paginator.previous_page %}
+    {% if paginator.previous_page == 1 %}
+      <a href="/" class="previous">&laquo;</a>
+    {% else %}
+      <a href="/page" class="previous">&laquo;</a>
+    {% endif %}
+  {% endif %}
+  {% if paginator.next_page %}
+    <a href="/page" class="next ">&raquo;</a>
+  {% endif %}
+</nav>
