--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
     <meta property="og:site_name" content="Tigim Insight" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="About" />
-    <meta property="og:description" content="Hi there! I am Jong Yoon Kim and I am a IT enthusiast wiht more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는" />
+    <meta property="og:description" content="Hi there! I am Jong Yoon Kim and I am a IT enthusiast with more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는" />
     <meta property="og:url" content="/about/" />
     <meta property="og:image" content="/assets/images/main_img.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/" />
@@ -41,7 +41,7 @@
     <meta property="article:modified_time" content="" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="About" />
-    <meta name="twitter:description" content="Hi there! I am Jong Yoon Kim and I am a IT enthusiast wiht more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는" />
+    <meta name="twitter:description" content="Hi there! I am Jong Yoon Kim and I am a IT enthusiast with more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image" content="/assets/images/main_img.jpg" />
     <meta name="twitter:label1" content="Written by" />
@@ -71,7 +71,7 @@
         "@type": "WebPage",
         "@id": "/about/"
     },
-    "description": "Hi there! I am Jong Yoon Kim and I am a IT enthusiast wiht more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는"
+    "description": "Hi there! I am Jong Yoon Kim and I am a IT enthusiast with more than 10 years of various experiences. > 최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기. 한 때는 위대한(?) 인물이 되어볼까 고민 했지만 부질 없음을 깨닫고 재미있는 그 무언가를 찾아 헤매이는"
 }
     </script>
 
@@ -141,7 +141,7 @@ into the {body} of the default.hbs template -->
             
 
             <section class="post-full-content">
-                <p>Hi there! I am Jong Yoon Kim and I am a IT enthusiast wiht more than 10 years of various experiences.</p>
+                <p>Hi there! I am Jong Yoon Kim and I am a IT enthusiast with more than 10 years of various experiences.</p>
 
 <blockquote>
   <p>최소한의 인류 보편적인 가치는 지키며, 세상에서 가장 제멋대로 살고 싶은 사람의 인생 여행기.</p>
