--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@ into the {body} of the default.hbs template -->
                     <h2 class="post-card-title">길찾기 알고리즘</h2>
                 </header>
                 <section class="post-card-excerpt">
-                    <p>Autonomous Navigation 부터 Fleet Management 시스템까지 패스파인딩 알고리즘이 안들어가는데 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfindings [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A*</p>
+                    <p>Autonomous Navigation 부터 Fleet Management 시스템까지 길찾기 알고리즘이 안들어가는데가 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfinding [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A*</p>
                 </section>
             </a>
             <footer class="post-card-meta">
