--- a/path_finding_algorithms.html
+++ b/path_finding_algorithms.html
@@ -32,7 +32,7 @@
     <meta property="og:site_name" content="Tigim Insight" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="길찾기 알고리즘" />
-    <meta property="og:description" content="Autonomous Navigation 부터 Fleet Management 시스템까지 패스파인딩 알고리즘이 안들어가는데 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfindings [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점" />
+    <meta property="og:description" content="Autonomous Navigation 부터 Fleet Management 시스템까지 길찾기 알고리즘이 안들어가는데가 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfinding [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점" />
     <meta property="og:url" content="/path_finding_algorithms" />
     <meta property="og:image" content="//arongranberg.com/astar/resources/images/frontpage.jpg" />
     <meta property="article:publisher" content="https://www.facebook.com/" />
@@ -42,7 +42,7 @@
     <meta property="article:tag" content="Technology" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="길찾기 알고리즘" />
-    <meta name="twitter:description" content="Autonomous Navigation 부터 Fleet Management 시스템까지 패스파인딩 알고리즘이 안들어가는데 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfindings [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점" />
+    <meta name="twitter:description" content="Autonomous Navigation 부터 Fleet Management 시스템까지 길찾기 알고리즘이 안들어가는데가 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfinding [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점" />
     <meta name="twitter:url" content="/" />
     <meta name="twitter:image" content="//arongranberg.com/astar/resources/images/frontpage.jpg" />
     <meta name="twitter:label1" content="Written by" />
@@ -74,7 +74,7 @@
         "@type": "WebPage",
         "@id": "/path_finding_algorithms"
     },
-    "description": "Autonomous Navigation 부터 Fleet Management 시스템까지 패스파인딩 알고리즘이 안들어가는데 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfindings [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점"
+    "description": "Autonomous Navigation 부터 Fleet Management 시스템까지 길찾기 알고리즘이 안들어가는데가 없다. 지금까지 검토한 내용 정리 해보자. Single-Agent Pathfinding [A* Algorithm] 이 알고리즘이 소개된건 이미 몇 십년 전이지만, 여전히 대부분의 시스템에서 사용하는 길찾기 알고리즘은 A* 일 것이다. 동작의 핵심은 Heap Queue, 또는 Priority Queue을 사용한 DFS이다. 정렬을 위한 값/코스트는 (현재 위치부터 출발점"
 }
     </script>
 
@@ -159,9 +159,9 @@ into the {body} of the default.hbs template -->
 
             <section class="post-full-content">
                 <div class="kg-card-markdown">
-                    <p>Autonomous Navigation 부터 Fleet Management 시스템까지 패스파인딩 알고리즘이 안들어가는데 없다. 지금까지 검토한 내용 정리 해보자.</p>
+                    <p>Autonomous Navigation 부터 Fleet Management 시스템까지 길찾기 알고리즘이 안들어가는데가 없다. 지금까지 검토한 내용 정리 해보자.</p>
 
-<h1 id="single-agent-pathfindings">Single-Agent Pathfindings</h1>
+<h1 id="single-agent-pathfinding">Single-Agent Pathfinding</h1>
 
 <p><strong>[A* Algorithm]</strong></p>
 
@@ -198,11 +198,11 @@ into the {body} of the default.hbs template -->
   <li><a href="https://www.cs.rit.edu/~ark/winter2012/730/team/1/presentation2.pdf">Distributed Shortest Paths Algorithms</a></li>
 </ul>
 
-<h1 id="multi-agent-pathfindings">Multi-Agent Pathfindings</h1>
+<h1 id="multi-agent-pathfinding">Multi-Agent Pathfinding</h1>
 
 <p><strong>[WHCA* Algorithm]</strong></p>
 
-<p>A* 에 시간 개념을 도입, 3D 환경에서 동작하게 만든 알고리즘. 적절한 크기의 타임 슬롯(Reservation Table)을 정하면, 무한 루프에 빠지는 일 없이 솔루션을 잘 찾아낸다. 속도는 코드 품질, 로봇의 수, 맵의 복잡도, 시스템 사양에 따라 틀리지만 대체로 좋은 성능을 보여준다. 40x40정도 크기이면 거의 실시간으로 동작한다.</p>
+<p>A* 에 시간 개념을 도입, 3D 환경에서 동작하게 만든 알고리즘. 적절한 크기의 타임 슬롯(Reservation Table)을 정하면, 무한 루프에 빠지는 일 없이 솔루션을 잘 찾아낸다. 속도는 코드 품질, 로봇의 수, 맵의 복잡도, 시스템 사양에 따라 틀리지만 대체로 좋은 성능을 보여준다. 40x40정도 크기이면 거의 <strong>실시간</strong>으로 동작한다.</p>
 
 <ul>
   <li><a href="https://pdfs.semanticscholar.org/1460/61be1affd4af17b8996f1d0316ad147368f5.pdf">Complete Algorithms for Cooperative Pathfinding Problems, 2005년</a></li>
@@ -213,7 +213,9 @@ into the {body} of the default.hbs template -->
 
 <p><strong>[ECBS]</strong></p>
 
-<p>제일 처음으로 검토한 알고리즘이며, 프로젝트 중반까지도 사용했었으나, 혼잡 상황에서 계산량 증가로 실시간 길찾기에 문제점이 많아 결국 폐기</p>
+<p>제일 처음으로 검토한 알고리즘이며, 프로젝트 중반까지도 사용했었으나, 혼잡 상황에서 계산량 증가로 <strong>실시간 길찾기에 문제점이 많아 결국 폐기</strong></p>
+
+<p><img src="https://ars.els-cdn.com/content/image/1-s2.0-S0004370214001386-gr014.gif" alt="" /></p>
 
 <ul>
   <li><a href="https://github.com/whoenig/libMultiRobotPlanning">libMultiRobotPlanning - ECBS를 포함한 여러 알고리즘 있음</a></li>
